<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:dragEdge="right"
    app:mode="same_level">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEdit"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/deleteswipecolor"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/deleteswipecolor"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/delete"
                android:textColor="@color/white"/>
        </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/category_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="@string/work"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/priority_background"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:background="@color/verticallinecolor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/category_btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/category_btn"
                app:layout_constraintTop_toBottomOf="@+id/category_btn" />

            <TextView
                android:id="@+id/date_shower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/category_btn"
                app:layout_constraintStart_toEndOf="@+id/category_btn" />

            <RadioButton
                android:id="@+id/task_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="224dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/category_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</com.chauthai.swipereveallayout.SwipeRevealLayout>